Added get book by id handler
